# MemryLab

./: .gitignore  .vercelignore  CONTRIBUTING.md  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  lib.rs
src-tauri/src/adapters/: keychain.rs  mod.rs
src-tauri/src/adapters/llm/: claude.rs  mod.rs  ollama.rs  openai_compat.rs  usage_logger.rs
src-tauri/src/adapters/sqlite/: activity_store.rs  chat_store.rs  connection.rs  document_store.rs  graph_store.rs  memory_store.rs  mod.rs  page_index.rs  prompt_store.rs  timeline_store.rs
src-tauri/src/adapters/sqlite/migrations/: mod.rs  v003_usage_log.sql  v004_pii_flags.sql  v005_prompt_registry.sql  v006_activity_log.sql
src-tauri/src/commands/: analysis.rs  auth.rs  boundaries.rs  chat.rs  embeddings.rs  entities.rs  evolution.rs  export.rs  import.rs  insights.rs  mod.rs  prompts.rs  provider_config.rs  query.rs  search.rs  settings.rs  tasks.rs  watch.rs
src-tauri/src/domain/models/: common.rs  document.rs  memory.rs
src-tauri/src/domain/ports/: graph_store.rs  page_index.rs  timeline_store.rs
src-tauri/src/pipeline/: mod.rs  pii_detector.rs
src-tauri/src/pipeline/analysis/: belief_extractor.rs  contradiction_detector.rs  evolution_differ.rs  insight_generator.rs  mod.rs  narrative_generator.rs  orchestrator.rs  sentiment_tracker.rs  theme_extractor.rs
src-tauri/src/pipeline/ingestion/: dedup.rs  file_extractors.rs  mod.rs  orchestrator.rs  zip_handler.rs
src-tauri/src/pipeline/ingestion/source_adapters/: amazon.rs  (+35 more)
src-tauri/src/prompts/: templates.rs
src-tauri/src/query/: rag_pipeline.rs
src-tauri/src/services/: folder_watcher.rs  mod.rs  task_manager.rs
(+52 files in other folders)
