[package]
name = "memory-palace"
version = "0.3.3"
description = "A searchable, visual timeline of how your thinking evolved"
authors = ["Tushar"]
edition = "2021"

[lib]
name = "memory_palace_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Storage - SQLite (use "bundled-sqlcipher" feature for encryption when OpenSSL is available)
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }

# Hashing
sha2 = "0.10"

# Text processing
unicode-normalization = "0.1"
regex = "1"
walkdir = "2"
notify = { version = "6", features = ["macos_fsevent"] }
serde_yaml = "0.9"
glob = "0.3"

# Async utilities
tokio-util = { version = "0.7", features = ["full"] }

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
log = "0.4"
dirs = "6"
zip = "2"

# OS keychain for secure secret storage
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
